--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h1 class="header-title">SURVIVE AT ALL COSTS</h1>
                 <h2 class="header-subtitle">Experience new social battle royale game</h2>
                
-                <a href="#!"><button class="header-button">Buy Now on Steam <svg xmlns="http://www.w3.org/2000/svg" width="3" height="26" viewBox="0 0 3 26" fill="none">
+                <a href="#!"><button class="button-92">Buy Now on Steam <svg xmlns="http://www.w3.org/2000/svg" width="3" height="26" viewBox="0 0 3 26" fill="none">
                     <path opacity="0.5" d="M0.587158 0.835388L1.58716 24.7643" stroke="#1A1917" stroke-width="0.873968" stroke-linecap="round"/>
                     </svg> $14.99</button></a>
                 
